Opened 10 years ago

Closed 10 years ago

Last modified 10 years ago

#12257 closed bug (fixed)

[launch_daemon] CWD is not set to /boot/home

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1/beta1
Component: Servers/launch_daemon Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev49474.

Prior to launch_daemon CWD was set to /boot/home in Bootscript. Now, every time I start Terminal it is set to "/".

As a workaround I've added cd to ~/config/settings/profile

Change History (3)

comment:1 by axeld, 10 years ago

Status: newin-progress

comment:2 by axeld, 10 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev49487.

comment:3 by axeld, 10 years ago

Milestone: UnscheduledR1/beta1
Note: See TracTickets for help on using tickets.