launch_daemon: Set working directory to user's directory.

* This fixes #12257.